Improved omni filter look and reordered other filters

--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -1,7 +1,7 @@
 {% extends 'rhyme/base.html' %}
 
 {% block content %}
-    <div id="filter-container">
+    <div id="filter-container" class="form-inline">
         {% include "rhyme/partials/omni_filter.html" %}
         {% include "rhyme/partials/album_filters.html" %}
         {% include "rhyme/partials/song_filters.html" %}
