--- a/rhyme/templates/rhyme/partials/omni_filter.html
+++ b/rhyme/templates/rhyme/partials/omni_filter.html
@@ -1,1 +1,6 @@
-<input data-bind="value: omniFilter, valueUpdate: 'keyup'" style="width: 100px" />
+<div class="input-group">
+    <div class="input-group-addon">
+        <i class="fa fa-magic"></i>
+    </div>
+    <input class="form-control" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
+</div>
