--- a/rhyme/templates/rhyme/partials/omni_filter.html
+++ b/rhyme/templates/rhyme/partials/omni_filter.html
@@ -2,5 +2,6 @@
     <div class="input-group-addon">
         <i class="fa fa-magic"></i>
     </div>
-    <input class="form-control" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
+    <!-- TODO: move style to LESS and restyle -->
+    <input class="form-control" style="width: 150px;" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
 </div>
