--- a/rhyme/templates/rhyme/playlist.html
+++ b/rhyme/templates/rhyme/playlist.html
@@ -64,9 +64,21 @@
                 {% include "rhyme/partials/item_page_filters.html" %}
             </div>
         </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Export to</h3>
+            </div>
+            <div class="panel-body">
+                <select name="config">
+                  {% for config in RHYME_EXPORT_CONFIGS %}
+                    <option>{{ config.name }}</option>
+                  {% endfor %}
+                </select>
+            </div>
+        </div>
     
-        <input name="config" value="home" /><!-- TODO: make this a choice -->
-        <button type="submit" class="btn btn-primary col-sm-12">
+        <button type="submit" class="btn btn-info col-sm-2">
             <i class='fas fa-play'></i>
             Make Playlist
         </button>
