--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -48,16 +48,12 @@ body > .loading {
 .post-nav {
     margin: @spacingWide;
 
-    #filter-container {
-        margin-top: @spacingNormal;
-        text-align: center;
+    #omni-filter {
+        display: inline-block;
 
-        #read-only-filters {
-            margin-top: @spacingNormal;
-        }
-
-        .filter-modal {
-            text-align: left;
+        input {
+            display: inline-block;
+            width: 150px;
         }
     }
 
