--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -1,11 +1,14 @@
 {% extends 'rhyme/base.html' %}
 
 {% block content %}
-    {% include "rhyme/partials/omni_filter.html" %}
-    {% include "rhyme/partials/album_filters.html" %}
-    {% include "rhyme/partials/song_filters.html" %}
-    {% include "rhyme/partials/item_page_filters.html" %}
-    {% include "rhyme/partials/infinite_scroll_item_count.html" with text="albums" %}
+    <div class="row">
+        <div class="col-sm-12 text-center">
+            {% include "rhyme/partials/infinite_scroll_item_count.html" %}
+            {% include "rhyme/partials/omni_filter.html" %}
+            {% include "rhyme/partials/album_filters.html" with condensed=True %}
+            {% include "rhyme/partials/song_filters.html" with condensed=True %}
+        </div>
+    </div>
     {% include "rhyme/partials/read_only_filters.html" %}
 
     <div class="item-page" data-url="{% url "album_list" %}">
