--- a/rhyme/templates/rhyme/partials/omni_filter.html
+++ b/rhyme/templates/rhyme/partials/omni_filter.html
@@ -1,7 +1,3 @@
-<div class="input-group">
-    <div class="input-group-addon">
-        <i class="fa fa-magic"></i>
-    </div>
-    <!-- TODO: move style to LESS and restyle -->
-    <input class="form-control" style="width: 150px;" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
+<div id="omni-filter">
+    <input class="form-control" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
 </div>
