--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -1,10 +1,14 @@
 {% extends 'rhyme/base.html' %}
 
 {% block content %}
-    {% include "rhyme/partials/omni_filter.html" %}
-    {% include "rhyme/partials/song_filters.html" %}
-    {% include "rhyme/partials/read_only_filters.html" %}
-    {% include "rhyme/partials/infinite_scroll_item_count.html" with text="songs" %}
+    <div class="row">
+        <div class="col-sm-12 text-center">
+            {% include "rhyme/partials/infinite_scroll_item_count.html" %}
+            {% include "rhyme/partials/omni_filter.html" %}
+            {% include "rhyme/partials/song_filters.html" with condensed=True %}
+            {% include "rhyme/partials/read_only_filters.html" %}
+        </div>
+    </div>
 
     <div class="item-page" data-url="{% url "song_list" %}">
         <table class="song-table table table-striped table-condensed table-hover infinite-scroll-container">
