--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -1,5 +1,7 @@
 {% extends 'rhyme/base.html' %}
 
+{% block title %}{{ block.super }}: Songs{% endblock title %}
+
 {% block content %}
     <div class="row">
         <div class="col-sm-12 text-center">
