--- a/rhyme/templates/rhyme/playlist.html
+++ b/rhyme/templates/rhyme/playlist.html
@@ -61,8 +61,7 @@
                 <h3 class="panel-title">Filters</h3>
             </div>
             <div class="panel-body">
-                {% include "rhyme/partials/song_filters.html" %}
-                {% include "rhyme/partials/album_filters.html" %}
+                {% include "rhyme/partials/filters.html" %}
                 {% include "rhyme/partials/read_only_filters.html" %}
             </div>
         </div>
