--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -7,7 +7,7 @@
         <div class="col-sm-12 text-center">
             {% include "rhyme/partials/infinite_scroll_item_count.html" %}
             {% include "rhyme/partials/omni_filter.html" %}
-            {% include "rhyme/partials/song_filters.html" with condensed=True %}
+            {% include "rhyme/partials/filters.html" with condensed=True %}
             {% include "rhyme/partials/read_only_filters.html" %}
         </div>
     </div>
