--- a/rhyme/templates/rhyme/partials/modal_filter_base.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base.html
@@ -16,6 +16,22 @@
             </div>
             <div class="modal-body">
                 {% block body %}{% endblock %}
+                {% if not disallow_null %}
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=?', false) }" data-dismiss="modal">
+                                <i class="fas fa-question-circle"></i>
+                                is null
+                            </button>
+                        </div>
+                        <div class="col-sm-6">
+                            <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=?', true) }" data-dismiss="modal">
+                                <i class="fas fa-check-circle"></i>
+                                is not null
+                            </button>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
