--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -39,9 +39,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href='{% url "playlist" %}'>
+                    <a href='{% url "playlists" %}'>
                         <i class="fas fa-list"></i>
-                        Playlist
+                        Playlists
+                    </a>
+                </li>
+                <li>
+                    <a href='{% url "playlist" %}'>
+                        <i class="fas fa-heartbeat"></i>
+                        Transitional Playlist
                     </a>
                 </li>
             </ul>
