--- a/miles/templates/miles/days.html
+++ b/miles/templates/miles/days.html
@@ -2,11 +2,45 @@
 
 {% block title %}Miles{% endblock title %}
 
+{% block style %}{{ block.super }}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    </link>
+{% endblock style %}
+
+{% block js %}{{ block.super }}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
+    <script src="/static/miles/js/miles.js"></script>
+{% endblock js %}
+
 {% block body %}
-    Three days
     <ul>
-        {% for day in days %}
-            <li>{{ day.weekday }}, {{ day }}</li>
-        {% endfor %}
+        <li>Frequency / All / Words</li>
+        <li>Running</li>
+        <li>Erging</li>
     </ul>
+
+    <div class="content">
+        <h1>All</h1>
+        <div class="graph">
+            area graph
+        </div>
+        <ul class="stats" data-bind="foreach: stats">
+            <li>this is a stat</li>
+        </div>
+        <ul class="recent-days" data-bind="foreach: recent_days">
+            <li>this is a day</li>
+        </ul>
+    </div>
 {% endblock body %}
