--- a/miles/templates/miles/days.html
+++ b/miles/templates/miles/days.html
@@ -25,22 +25,44 @@
 {% endblock js %}
 
 {% block body %}
-    <ul>
-        <li>Frequency / All / Words</li>
-        <li>Running</li>
-        <li>Erging</li>
-    </ul>
-
-    <div class="content">
-        <h1>All</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Kilo</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#" data-bind="click: updateActivity">
+                    Frequency / All / Words
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-activity="running" data-bind="click: updateActivity">
+                    Running
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-activity="erging" data-bind="click: updateActivity">
+                    Erging
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="container-fluid">
         <div class="graph">
             area graph
         </div>
         <ul class="stats" data-bind="foreach: stats">
             <li>this is a stat</li>
         </div>
-        <ul class="recent-days" data-bind="foreach: recent_days">
-            <li>this is a day</li>
-        </ul>
+        <table class="recent-days">
+            <tbody data-bind="foreach: recent_days">
+                <tr>
+                    <td data-bind="text: day"></td>
+                    <td>
+                        <ul data-bind="foreach: workouts">
+                            <li data-bind="text: activity"></li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 {% endblock body %}
