--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -45,9 +45,6 @@
     </ul>
   </nav>
   <div class="container-fluid">
-    <div class="graph">
-      area graph
-    </div>
     <div class="card-deck text-center" data-bind="foreach: stats">
       <div class="card">
         <div class="card-header" data-bind="text: name"></div>
@@ -57,23 +54,33 @@
         </div>
       </div>
     </div>
-    <table class="table table-hover">
-      <tbody data-bind="foreach: recent_days">
-        <tr>
-          <td data-bind="text: day"></td>
-          <td>
-            <ul class="list-unstyled" data-bind="foreach: workouts">
-              <li data-bind="text: activity"></li>
-            </ul>
-          </td>
-          <td>
-            <ul class="list-unstyled" data-bind="foreach: workouts">
-              <li data-bind="text: summary"></li>
-            </ul>
-          </td>
-          <td data-bind="text: notes"></td>
-        </tr>
-      </tbody>
-    </table>
+    <br><br>
+    <div class="row">
+      <div class="col-4">
+        <div class="graph">
+          graph
+        </div>
+      </div>
+      <div class="col-8">
+        <table class="table table-hover">
+          <tbody data-bind="foreach: recent_days">
+            <tr>
+              <td data-bind="text: day"></td>
+              <td>
+                <ul class="list-unstyled" data-bind="foreach: workouts">
+                  <li data-bind="text: activity"></li>
+                </ul>
+              </td>
+              <td>
+                <ul class="list-unstyled" data-bind="foreach: workouts">
+                  <li data-bind="text: summary"></li>
+                </ul>
+              </td>
+              <td data-bind="text: notes"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 {% endblock body %}
