--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -28,6 +28,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"
           integrity="sha512-FHsFVKQ/T1KWJDGSbrUhTJyS1ph3eRrxI228ND0EGaEp6v4a/vGwPWd3Dtd/+9cI7ccofZvl/wulICEurHN1pg=="
           crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.3.2/knockout.mapping.min.js"
+          integrity="sha512-sCLnmp1UrJki3R9zwZMLXg9lXlGxJ6yFVuiSJ1pi1qRST3CJPAkJIhOHEQZz10P2gWgY3H8Y33na5Ak9PV5PLA=="
+          crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"
           integrity="sha512-+IpCthlNahOuERYUSnKFjzjdKXIbJ/7Dd6xvUp+7bEw0Jp2dg6tluyxLs+zq9BMzZgrLv8886T4cBSqnKiVgUw=="
           crossorigin="anonymous"></script>
@@ -53,6 +56,9 @@
         </a>
       </li>
     </ul>
+    <button type="button" class="pull-right btn btn-primary" data-bind="click: openModal">
+      Add
+    </button>
   </nav>
   <div class="container-fluid">
     <div class="card-deck text-center" data-bind="foreach: stats">
@@ -71,9 +77,9 @@
       </div>
       <div class="col-8">
         <table class="table table-hover">
-          <tbody data-bind="foreach: recent_days">
-            <tr class="row">
-              <td class="col-2" data-bind="text: day"></td>
+          <tbody data-bind="foreach: recentDays">
+            <tr class="row" data-bind="if: id">
+              <td class="col-2" data-bind="text: pretty_day"></td>
               <td class="col-2">
                 <ul class="list-unstyled" data-bind="foreach: workouts">
                   <li data-bind="text: activity"></li>
@@ -81,13 +87,61 @@
               </td>
               <td class="col-2">
                 <ul class="list-unstyled" data-bind="foreach: workouts">
-                  <li data-bind="text: summary"></li>
+                  <!-- ko if: id -->
+                    <li data-bind="text: summary"></li>
+                  <!-- /ko -->
                 </ul>
               </td>
-              <td class="col-6" data-bind="text: notes"></td>
+              <td class="col-5" data-bind="text: notes"></td>
+              <td class="col-1">
+                <button type="button" class="pull-right btn btn-primary" data-bind="click: $root.openModal, attr: {'data-id': id}">
+                  Edit
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="edit-day" tabindex="-1" role="dialog" aria-labelledby="edit-day-title" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" data-bind="with: currentDay">
+        <div class="modal-header">
+          <div class="form-inline" id="edit-day-title">
+            <span data-bind="text: dayOfWeek"></span>,
+            <input type="text" class="form-control form-control-sm" data-bind="value: month" />
+            <input type="text" class="form-control form-control-sm" data-bind="value: day_of_month" />
+            ,
+            <input type="text" class="form-control form-control-sm" data-bind="value: year" />
+          </div>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div data-bind="foreach: workouts">
+            <div class="row">
+              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="activity" data-bind="value: activity" /></div>
+              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="distance" data-bind="value: distance" /></div>
+              <div class="col"><input type="text" class="form-control form-control-sm" data-bind="value: distance_unit" /></div>
+              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="time" data-bind="value: seconds" /></div>
+            </div>
+            <div class="row">
+              <div class="col"></div>
+              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="sets" data-bind="value: sets" /></div>
+              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="reps" data-bind="value: reps" /></div>
+              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="weight" data-bind="value: weight" /></div>
+            </div>
+          </div>
+          <button type="button" class="btn btn-secondary" data-bind="click: addWorkout">Add Workout</button>
+          <textarea class="form-control" placeholder="How was today?" data-bind="value: notes" rows="5"></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
       </div>
     </div>
   </div>
