--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -72,6 +72,14 @@
     </div>
   </nav>
   <div class="container-fluid">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    {% endfor %}
     <div class="card-deck text-center" data-bind="foreach: stats">
       <div class="card">
         <div class="card-header" data-bind="text: name"></div>
@@ -119,40 +127,44 @@
   <div class="modal fade" id="edit-day" tabindex="-1" role="dialog" aria-labelledby="edit-day-title" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content" data-bind="with: currentDay">
-        <div class="modal-header">
-          <div class="form-inline" id="edit-day-title">
-            <span data-bind="text: dayOfWeek"></span>,
-            <input type="text" class="form-control form-control-sm" data-bind="value: month" />
-            <input type="text" class="form-control form-control-sm" data-bind="value: day_of_month" />
-            ,
-            <input type="text" class="form-control form-control-sm" data-bind="value: year" />
-          </div>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div data-bind="foreach: workouts">
-            <div class="row">
-              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="activity" data-bind="value: activity" /></div>
-              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="distance" data-bind="value: distance" /></div>
-              <div class="col"><input type="text" class="form-control form-control-sm" data-bind="value: distance_unit" /></div>
-              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="time" data-bind="value: seconds" /></div>
+        <form method="post">
+          <input type="hidden" name="day_id" data-bind="value: id" />
+          {% csrf_token %}
+          <div class="modal-header">
+            <div class="form-inline" id="edit-day-title">
+              <span data-bind="text: dayOfWeek"></span>,
+              <input type="text" class="form-control form-control-sm" name="month" data-bind="value: month" />
+              <input type="text" class="form-control form-control-sm" name="day_of_month" data-bind="value: day_of_month" />
+              ,
+              <input type="text" class="form-control form-control-sm" name="year" data-bind="value: year" />
             </div>
-            <div class="row">
-              <div class="col"></div>
-              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="sets" data-bind="value: sets" /></div>
-              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="reps" data-bind="value: reps" /></div>
-              <div class="col"><input type="text" class="form-control form-control-sm" placeholder="weight" data-bind="value: weight" /></div>
-            </div>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-          <button type="button" class="btn btn-secondary" data-bind="click: addWorkout">Add Workout</button>
-          <textarea class="form-control" placeholder="How was today?" data-bind="value: notes" rows="5"></textarea>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+          <div class="modal-body">
+            <div data-bind="foreach: workouts">
+              <div class="row">
+                <div class="col"><input type="text" class="form-control form-control-sm" name="activity" placeholder="activity" data-bind="value: activity" /></div>
+                <div class="col"><input type="text" class="form-control form-control-sm" name="distance" placeholder="distance" data-bind="value: distance" /></div>
+                <div class="col"><input type="text" class="form-control form-control-sm" name="distance_unit" data-bind="value: distance_unit" /></div>
+                <div class="col"><input type="text" class="form-control form-control-sm" name="seconds" placeholder="time" data-bind="value: seconds" /></div>
+              </div>
+              <div class="row">
+                <div class="col"></div>
+                <div class="col"><input type="text" class="form-control form-control-sm" name="sets" placeholder="sets" data-bind="value: sets" /></div>
+                <div class="col"><input type="text" class="form-control form-control-sm" name="reps" placeholder="reps" data-bind="value: reps" /></div>
+                <div class="col"><input type="text" class="form-control form-control-sm" name="weight" placeholder="weight" data-bind="value: weight" /></div>
+              </div>
+            </div>
+            <button type="button" class="btn btn-secondary" data-bind="click: addWorkout">Add Workout</button>
+            <textarea class="form-control" name="notes" placeholder="How was today?" data-bind="value: notes" rows="5"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
