Added saving of workouts

--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -144,10 +144,17 @@
           </div>
           <div class="modal-body">
             <div data-bind="foreach: workouts">
+              <input type="hidden" name="workout_id" data-bind="value: id" />
               <div class="row">
                 <div class="col"><input type="text" class="form-control form-control-sm" name="activity" placeholder="activity" data-bind="value: activity" /></div>
                 <div class="col"><input type="text" class="form-control form-control-sm" name="distance" placeholder="distance" data-bind="value: distance" /></div>
-                <div class="col"><input type="text" class="form-control form-control-sm" name="distance_unit" data-bind="value: distance_unit" /></div>
+                <div class="col">
+                  <select class="form-control form-control-sm" name="distance_unit" data-bind="value: distance_unit">
+                    {% for unit in distance_units %}
+                      <option>{{ unit }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
                 <div class="col"><input type="text" class="form-control form-control-sm" name="seconds" placeholder="time" data-bind="value: seconds" /></div>
               </div>
               <div class="row">
