--- a/rhyme/templates/rhyme/partials/filters.html
+++ b/rhyme/templates/rhyme/partials/filters.html
@@ -16,6 +16,8 @@
 {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Tag' icon='tags' lhs='tag' url='tag_select2' include_all=True condensed=condensed disallow_null=True %}
 {% include 'rhyme/partials/modal_filter_numeric.html' with model='song' name='Tag Year' icon='tag' lhs='tag_year' condensed=condensed disallow_null=True %}
 
+{% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Playlist' icon='list' lhs='playlist' url='playlist_select2' include_all=True condensed=condensed disallow_null=True %}
+
 <input name="song_filters" type="hidden" data-bind="value: songFilters" />
 
 
