--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -3,8 +3,9 @@
 {% block title %}Kilo{% endblock title %}
 
 {% block style %}{{ block.super }}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+        crossorigin="anonymous">
   </link>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css"
         integrity="sha512-cznfNokevSG7QPA5dZepud8taylLdvgr0lDqw/FEZIhluFsSwyvS81CMnRdrNSKwbsmc43LtRd2/WMQV+Z85AQ=="
@@ -20,9 +21,10 @@
           integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
           crossorigin="anonymous">
   </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
           crossorigin="anonymous">
+  </script>
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"
@@ -38,8 +40,8 @@
 {% endblock js %}
 
 {% block body %}
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav mr-auto">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
+    <ul class="navbar-nav flex-grow-1">
       <li class="nav-item{% if not activity %} active{% endif %}">
         <a class="nav-link" href="{% url "days" %}">
           Kilo
@@ -56,7 +58,7 @@
         </a>
       </li>
     </ul>
-    <div class="pull-right">
+    <div class="me-2">
       <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add</button>
       <div class="dropdown-menu">
         <!-- ko foreach: workoutTemplates -->
@@ -80,12 +82,25 @@
         {{ message }}
       </div>
     {% endfor %}
-    <div class="card-deck text-center" data-bind="foreach: stats">
-      <div class="card">
-        <div class="card-header" data-bind="text: name"></div>
-        <div class="card-body">
-            <h1 data-bind="text: primary"></h1>
-            <span data-bind="text: secondary"></span>
+    <div data-bind="visible: loading">
+      <div class="spinner-grow text-secondary m-3" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-secondary m-3" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-secondary m-3" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+    <div class="row" data-bind="foreach: stats">
+      <div class="col">
+        <div class="card text-center">
+          <div class="card-header" data-bind="text: name"></div>
+          <div class="card-body">
+              <h1 data-bind="text: primary"></h1>
+              <span data-bind="text: secondary"></span>
+          </div>
         </div>
       </div>
     </div>
