--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -14,18 +14,9 @@
 {% endblock style %}
 
 {% block js %}{{ block.super }}
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-          integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-          integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-          crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-          crossorigin="anonymous">
-  </script>
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+          crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"
           integrity="sha512-FHsFVKQ/T1KWJDGSbrUhTJyS1ph3eRrxI228ND0EGaEp6v4a/vGwPWd3Dtd/+9cI7ccofZvl/wulICEurHN1pg=="
@@ -59,20 +50,29 @@
       </li>
     </ul>
     <div class="me-2">
-      <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add</button>
-      <div class="dropdown-menu">
-        <!-- ko foreach: workoutTemplates -->
-          <a class="dropdown-item" data-bind="click: $root.openModal, attr: {'data-template': JSON.stringify($data)}">
-            <span data-bind="text: activity"></span>
-            <span data-bind="text: distance"></span>
-            <span data-bind="visible: distance, text: distance_unit"></span>
-          </a>
-        <!-- /ko -->
-        <div role="separator" class="dropdown-divider"></div>
-        <a class="dropdown-item" data-bind="click: $root.openModal">Blank Day</a>
+      <div class="dropdown dropstart">
+        <button class="btn btn-outline-secondary dropdown-toggle" id="add-workout-dropdown-btn" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Add
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="add-workout-dropdown-btn">
+          <!-- ko foreach: workoutTemplates -->
+          <li>
+            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#edit-day" data-bind="click: $root.populateCurrentDay, attr: {'data-template': JSON.stringify($data)}">
+              <span data-bind="text: activity"></span>
+              <span data-bind="text: distance"></span>
+              <span data-bind="visible: distance, text: distance_unit"></span>
+            </a>
+          </li>
+          <!-- /ko -->
+          <div role="separator" class="dropdown-divider"></div>
+          <li>
+            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#edit-day" data-bind="click: $root.populateCurrentDay">Blank Day</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
+  <br />
   <div class="container-fluid">
     {% for message in messages %}
       <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
@@ -128,7 +128,7 @@
               </td>
               <td class="col-5" data-bind="text: notes"></td>
               <td class="col-1">
-                <button type="button" class="pull-right btn btn-primary" data-bind="click: $root.openModal, attr: {'data-id': id}">
+                <button type="button" class="pull-right btn btn-primary" data-bs-toggle="modal" data-bs-target="#edit-day" data-bind="click: $root.populateCurrentDay, attr: {'data-id': id}">
                   Edit
                 </button>
               </td>
@@ -139,7 +139,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="edit-day" tabindex="-1" role="dialog" aria-labelledby="edit-day-title" aria-hidden="true">
+  <div class="modal fade in" id="edit-day" tabindex="-1" role="dialog" aria-labelledby="edit-day-title" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content" data-bind="with: currentDay">
         <form method="post">
