--- a/orange/templates/orange/base.html
+++ b/orange/templates/orange/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}{% endblock title %}</title>
 
+        <link rel="stylesheet" type="text/css" href="/static/fontawesome/css/all.css" />
         {% block style %}
         {% endblock style %}
 
