--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -187,9 +187,7 @@
                   <input type="text" class="form-control form-control-sm" placeholder="time" data-bind="value: time" />
                   <input type="hidden" name="seconds" data-bind="value: seconds" />
                 </div>
-                <!--div class="col-2">
-                  2:04.0
-                </div-->
+                <div class="col-2" data-bind="text: pace"></div>
                 <div class="col-1">
                   <button type="button" class="btn btn-outline-secondary btn-sm" data-bind="click: $parent.removeWorkout">
                     <i class="fa fa-times"></i>
