Added App component and gave it control of Loading component

--- a/kilo/templates/kilo/days.html
+++ b/kilo/templates/kilo/days.html
@@ -85,7 +85,7 @@
         {{ message }}
       </div>
     {% endfor %}
-    <div id="loading" data-bind="visible: loading"></div>
+    <div id="app"></div>
     <div id="stats"></div>
     <br><br>
     <div class="row">
