Added saving of notes

--- a/orange/templates/orange/base.html
+++ b/orange/templates/orange/base.html
@@ -20,5 +20,8 @@
     <body>
         {% block body %}
         {% endblock body %}
+        <div id="csrf-token">
+            {% csrf_token %}
+        </div>
     </body>
 </html>
