--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -18,7 +18,7 @@
     <script src="{% static "knockout/build/output/knockout-latest.js" %}"></script>
     <script src="{% static "select2/dist/js/select2.full.min.js" %}"></script>
     <script src="{% static "rhyme/js/utils.js" %}"></script>
-    <script src="{% static "rhyme/js/song_table.js" %}"></script>
+    <script type="module" src="{% static "rhyme/js/song_table.js" %}"></script>
     <script src="{% static "rhyme/js/rhyme.js" %}"></script>
 {% endblock js %}
 
